Add admin user credential and remote security
Changes:
* add matrix-auth plugin to support matrix authentication for jenkins projects

--- a/resources/config/configuration-as-code-plugin/jenkins.yaml
+++ b/resources/config/configuration-as-code-plugin/jenkins.yaml
@@ -3,7 +3,7 @@ jenkins:
   numExecutors: 1
 
   remotingSecurity:
-    enabled: false
+    enabled: true
 
   globalNodeProperties:
     - envVars:
@@ -11,10 +11,10 @@ jenkins:
           - key: "ENV1"
             value: "VALUE1"
 
-  # authorizationStrategy:
-  #   globalMatrix:
-  #     permissions:
-  #       - "Overall/Administer:admin"
+  authorizationStrategy:
+    globalMatrix:
+      permissions:
+        - "Overall/Administer:admin"
 
   # JNLP port for remote agents
   slaveAgentPort: 50000
