Add ssh public key to the admin user for jenkins-cli access

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ script:
 after_success:
 - make jocker
 - make test || travis_terminate 1
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
