--- a/shared-library/config/casc-config/jenkins.yaml
+++ b/shared-library/config/casc-config/jenkins.yaml
@@ -28,14 +28,15 @@ security:
     port: 6666
 
 unclassified:
-
   globalLibraries:
     libraries:
       - name: "shared-lib"
+      - defaultVersion: "master"
+        implicit: true
         includeInChangesets: false
         retriever:
           modernSCM:
             scm:
               git:
                 remote: "git@github.com:fr123k/jocker"
-                credentialsId: "github-ssh-jocker"
+                credentialsId: "deploy-key-shared-library"
