Fix failing admin password generation in groovy

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ after_success:
   - sleep 60 # wait for the jenkins to finish boostraping
   - make test || travis_terminate 1
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" -a "$TRAVIS_BRANCH" = "master" ]; then make release; fi
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" -a "$TRAVIS_BRANCH" = "master" ]; then make release; fi
