Fix broken global shared library
Setup a jenkins [shared library repo](https://github.com/fr123k/jenkins-shared-library)

--- a/shared-library/config/casc-config/jenkins.yaml
+++ b/shared-library/config/casc-config/jenkins.yaml
@@ -31,12 +31,12 @@ unclassified:
   globalLibraries:
     libraries:
       - name: "shared-lib"
-      - defaultVersion: "master"
+        defaultVersion: "master"
         implicit: true
         includeInChangesets: false
         retriever:
           modernSCM:
             scm:
               git:
-                remote: "git@github.com:fr123k/jocker"
+                remote: "git@github.com:fr123k/jenkins-shared-library"
                 credentialsId: "deploy-key-shared-library"
