Add jocker golang/pulumi agent bootstrap and test
The [jocker-agents](https://github.com/fr123k/jocker-agents) golang/pulumi is
bootstrap and tested during the jocker travis build.

TODO move the bootstrap and test to the jocker-agents repo.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,8 @@ after_success:
   - make jocker
   - sleep 90 # wait for the jenkins to finish boostraping
   - make test || travis_terminate 1
+  - make agent
+  - sleep 10 # wait for docker jenkins agent to join
+  - make test-agent-pulumi
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - if [ "$TRAVIS_PULL_REQUEST" = "false" -a "$TRAVIS_BRANCH" = "master" ]; then make release; fi
