--- a/shared-library/config/casc-config/jenkins.yaml
+++ b/shared-library/config/casc-config/jenkins.yaml
@@ -27,16 +27,16 @@ security:
   sSHD:
     port: 6666
 
-unclassified:
-  globalLibraries:
-    libraries:
-      - name: "shared-lib"
-        defaultVersion: "master"
-        implicit: true
-        includeInChangesets: false
-        retriever:
-          modernSCM:
-            scm:
-              git:
-                remote: "git@github.com:fr123k/jenkins-shared-library"
-                credentialsId: "deploy-key-shared-library"
+# unclassified:
+#   globalLibraries:
+#     libraries:
+#       - name: "shared-lib"
+#         defaultVersion: "master"
+#         implicit: true
+#         includeInChangesets: false
+#         retriever:
+#           modernSCM:
+#             scm:
+#               git:
+#                 remote: "git@github.com:fr123k/jenkins-shared-library"
+#                 credentialsId: "deploy-key-shared-library"
