--- a/shared-library/config/casc-config/jenkins.yaml
+++ b/shared-library/config/casc-config/jenkins.yaml
@@ -27,53 +27,53 @@ security:
   sSHD:
     port: 6666
 
-unclassified:
-  gitHubConfiguration:
-    apiRateLimitChecker: ThrottleOnOver
-  jobNodesOnDemandConfiguration:
-    enabled: true
-    revision: "origin/master"
-    gitUrl: "https://github.com/fr123k/jocker-agents"
-    gitRevision: "origin/master"
-    excludeLabels: docker
-    agentProvisionJob: "jenkins/DockerAgentBootstrap"
-    agentDecomissionJob: "jenkins/DockerAgentDestroy"
-    agentImage: "fr123k/jocker-agents-{label}"
-    agentWorkDir: "/home/jenkins"
-  globalDefaultFlowDurabilityLevel:
-    durabilityHint: "PERFORMANCE_OPTIMIZED"
-  prioritySorterConfiguration:
-    strategy: 
-      absoluteStrategy:
-        defaultPriority: 3
-        numberOfPriorities: 5
-  priorityConfiguration:
-    jobGroups:
-      - id: 0
-        priority: 1
-        description: "Jenkins"
-        runExclusive: false
-        usePriorityStrategies: true
-        priorityStrategies:
-          - userIdCauseStrategy:
-              priority: 1
-          - upstreamCauseStrategy
-          - userIdCauseStrategy:
-              priority: 3
-          - cLICauseStrategy:
-              priority: 4
-          - jobPropertyStrategy
-          - buildParameterStrategy:
-              parameterName: priority
-        jobGroupStrategy:
-          folderBased:
-            folderName: "Jenkins"
-      - id: 0
-        priority: 2
-        description: "Else"
-        runExclusive: false
-        usePriorityStrategies: false
-        jobGroupStrategy: allJobs
+# unclassified:
+#   gitHubConfiguration:
+#     apiRateLimitChecker: ThrottleOnOver
+#   jobNodesOnDemandConfiguration:
+#     enabled: true
+#     revision: "origin/master"
+#     gitUrl: "https://github.com/fr123k/jocker-agents"
+#     gitRevision: "origin/master"
+#     excludeLabels: docker
+#     agentProvisionJob: "jenkins/DockerAgentBootstrap"
+#     agentDecomissionJob: "jenkins/DockerAgentDestroy"
+#     agentImage: "fr123k/jocker-agents-{label}"
+#     agentWorkDir: "/home/jenkins"
+#   globalDefaultFlowDurabilityLevel:
+#     durabilityHint: "PERFORMANCE_OPTIMIZED"
+#   prioritySorterConfiguration:
+#     strategy: 
+#       absoluteStrategy:
+#         defaultPriority: 3
+#         numberOfPriorities: 5
+#   priorityConfiguration:
+#     jobGroups:
+#       - id: 0
+#         priority: 1
+#         description: "Jenkins"
+#         runExclusive: false
+#         usePriorityStrategies: true
+#         priorityStrategies:
+#           - userIdCauseStrategy:
+#               priority: 1
+#           - upstreamCauseStrategy
+#           - userIdCauseStrategy:
+#               priority: 3
+#           - cLICauseStrategy:
+#               priority: 4
+#           - jobPropertyStrategy
+#           - buildParameterStrategy:
+#               parameterName: priority
+#         jobGroupStrategy:
+#           folderBased:
+#             folderName: "Jenkins"
+#       - id: 0
+#         priority: 2
+#         description: "Else"
+#         runExclusive: false
+#         usePriorityStrategies: false
+#         jobGroupStrategy: allJobs
 
 # unclassified:
 #   globalLibraries:
